crates/plotnik-lib/tests/04-emit/fields/negated_blocks_child.txt
Q = (new_expression -arguments (arguments))
------------------ DIAGNOSTICS -------------------
error: `-arguments` requires `arguments` to be absent, but this `new_expression` pattern also matches `arguments`
 --> query.ptk:1:22
  |
1 | Q = (new_expression -arguments (arguments))
  |                      ^^^^^^^^^ ----------- matches `arguments` here
  |
help: drop `-arguments` or remove the `arguments` child
